2005-03-29  Kenichi Handa  <handa@m17n.org>

	* ps-mule.el (ps-mule-plot-string): Translate characters by
	ps-print-translation-table.
	(ps-mule-begin-job): Call find-charset-region/string with
	ps-print-translation-table.

	* ps-print.el (ps-print-translation-table): New variable.
	(ps-plot-region): Translate characters by
	ps-print-translation-table.

2005-03-29  Juri Linkov  <juri@jurta.org>

	* simple.el (next-error-highlight-timer): New variable.

	* progmodes/compile.el (compilation-goto-locus):
	Use `next-error-highlight-timer' instead of `sit-for'.

2005-03-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mail/supercite.el (sc-mail-field): Use assoc-string.
	(sc-get-address): Simplify regexps.

	* files.el (minibuffer-with-setup-hook): New macro.
	(find-file-read-args): Use it to avoid let-binding
	minibuffer-with-setup-hook (which breaks turning on/off
	file-name-shadow-mode while in the prompt).

	* complete.el (PC-read-include-file-name-internal): Use test-completion.

2005-03-28  Luc Teirlinck  <teirllm@auburn.edu>

	* font-lock.el: Bind `font-lock-fontify-block' to M-o M-o.

2005-03-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* window.el (window-buffer-height): Use count-screen-lines.

	* progmodes/python.el (python-preoutput-leftover): New var.
	(python-preoutput-filter): Use it.
	(python-send-receive): Loop until all the result has been received.

2005-03-28  Juri Linkov  <juri@jurta.org>

	* dired.el (dired-mode-map): Add ellipsis to "Compare directories".

	* menu-bar.el (menu-bar-file-menu): Remove ellipsis from
	"Recover Crashed Session".
	(menu-bar-search-menu): Add ellipsis to "Search tagged files".
	(menu-bar-replace-menu): Add ellipsis to "Replace in tagged files".
	(menu-bar-goto-menu): Add ellipsis to "Set Tags File Name".
	(menu-bar-goto-menu): Add ellipsis to "Tags Apropos".
	(menu-bar-options-menu): Add ellipsis to "Set Font/Fontset".
	(menu-bar-manuals-menu): Add ellipsis to "Find Command in Manual".